fixed traits alignment and shields start at one

--- a/app/assets/stylesheets/ssd.css.scss
+++ b/app/assets/stylesheets/ssd.css.scss
@@ -73,6 +73,7 @@
 	.ship_info_tables {
 		position: relative;
 		left: 110px;
+		height: 480px;
 		.info {
 			width: 200px;
 			text-align: center;
@@ -85,22 +86,25 @@
 			}
 		}
 		.ship_traits {
-			position: relative;
+			position: absolute;
 			font-size: 10px;
 			width: 100px;
 			left: 110px;
+			top: 40px;
 		}
-		.critical_tables table {
-			width: 172px;
-			height: 25px;
-			border-color: white;
-			position: relative;
-			left: -60px;
-			top: -60px;
-			td {
-				width: 14px;
-				text-align: center;
-				border: solid black 1px;
+		.critical_tables {
+			padding-top: 10px;
+			table {
+				width: 172px;
+				height: 25px;
+				border-color: white;
+				position: relative;
+				left: -60px;
+				td {
+					width: 14px;
+					text-align: center;
+					border: solid black 1px;
+				}
 			}
 		}
 	}
@@ -113,7 +117,7 @@
 			  width: 324px;
 			  font-size: 7px;
 			  position: relative;
-			  top: -40px;
+			  top: 10px;
 			  left: -60px;
 	
 				th {
